# mcp-collection

./: README.md
calculator_rust/: Cargo.toml
calculator_rust/src/: calculator.rs  main.rs
lichess_go/: .gitignore  Makefile  go.mod  lichess.http
lichess_go/cmd/mcp/: main.go
lichess_go/internal/lichess/: lichess.go
lichess_go/internal/tools/: board_move.go  board_status.go  connect_game.go  tools.go
metalprice_go/: .gitignore  go.mod  main.go
metalprice_go/internal/: metalprice.go  util.go
weather_rust/: CLAUDE.md  Cargo.toml  openweathermap.http
weather_rust/src/: main.rs  weather.rs
